--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,16 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.11.8"
+requires-python = ">=3.11.8,<4.0"
+
 dependencies = [
     "django (>=5.2.3,<6.0.0)",
     "polars (>=1.31.0,<2.0.0)",
     "django-tailwind (>=4.0.1,<5.0.0)",
     "django-browser-reload (>=1.18.0,<2.0.0)",
-    "django-tailwind-4 (>=0.1.4,<0.2.0)"
+    "django-tailwind-4 (>=0.1.4,<0.2.0)",
+    "python-decouple (>=3.8,<4.0)",
+    "adlfs (>=2024.12.0,<2025.0.0)",
 ]
 
 
