--- a/cool/static_src/package.json
+++ b/cool/static_src/package.json
@@ -24,5 +24,9 @@
     "postcss-simple-vars": "^7.0.1",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.9",
+    "daisyui": "^5.0.43"
   }
 }
